[gd_scene load_steps=15 format=3 uid="uid://k1snwu2eys26"]

[ext_resource type="Texture2D" uid="uid://b3nfthtn6c7j7" path="res://assets/characters/shopkeeper.png" id="1_dt1ut"]
[ext_resource type="Script" uid="uid://dbeh03ffg3t4a" path="res://scenes/characters/shopkeeper/shopkeeper.gd" id="1_inoif"]

[sub_resource type="Animation" id="Animation_inoif"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_dt1ut"]
resource_name = "idle_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4qm02"]
resource_name = "idle_left"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_kauym"]
resource_name = "idle_right"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_3ptgy"]
resource_name = "idle_up"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_owvg0"]
resource_name = "walk_down"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_2c13j"]
resource_name = "walk_left"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_tcxv5"]
resource_name = "walk_right"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_sulol"]
resource_name = "walk_up"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2c13j"]
_data = {
&"RESET": SubResource("Animation_inoif"),
&"idle_down": SubResource("Animation_dt1ut"),
&"idle_left": SubResource("Animation_4qm02"),
&"idle_right": SubResource("Animation_kauym"),
&"idle_up": SubResource("Animation_3ptgy"),
&"walk_down": SubResource("Animation_owvg0"),
&"walk_left": SubResource("Animation_2c13j"),
&"walk_right": SubResource("Animation_tcxv5"),
&"walk_up": SubResource("Animation_sulol")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dt1ut"]
radius = 3.99884
height = 13.9977

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dt1ut"]

[node name="Shopkeeper" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_inoif")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -9)
texture = ExtResource("1_dt1ut")
hframes = 8
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2c13j")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
rotation = 1.57195
shape = SubResource("CapsuleShape2D_dt1ut")

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, 15)
shape = SubResource("RectangleShape2D_dt1ut")
debug_color = Color(0.667068, 0.493563, 0.370834, 0.42)

[node name="TendTarget" type="Marker2D" parent="."]
position = Vector2(0, 35)

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
